--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ python:
 - "3.5"
 
 env:
-global:
--ENVIRONMENT ='testing_env'
+  global:
+    -ENVIRONMENT ='testing_env'
 
 services:
 -postgres
 
 before_script:
--"psql -c 'create database test_db;' -U postgres"
+-"psql -c 'create database record_db;' -U postgres"
 
 script: 
 - python -m pytest --cov
